--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
+.mainColor {
+  color: #a974ff !important;
+}
+.garyColor {
+  background-color: #f5f9ff;
+}
+.active {
+  color: #3e3e8d !important;
+  -webkit-box-shadow: 2px 17px 33px -20px rgba(219, 219, 219, 1);
+  -moz-box-shadow: 2px 17px 33px -20px rgba(219, 219, 219, 1);
+  box-shadow: 2px 17px 33px -20px rgba(219, 219, 219, 1);
+}
+.active i {
+  color: #a974ff !important;
+}
+
+.card-shadow {
+  -webkit-box-shadow: 0px 4px 15px -3px rgba(158, 175, 250, 1);
+  -moz-box-shadow: 0px 4px 15px -3px rgba(158, 175, 250, 1);
+  box-shadow: 0px 4px 15px -3px rgba(158, 175, 250, 1);
+}
+.brdr {
+  border-right: 1px solid #e8e8ea;
+}
+.Loading {
+  color: #3e3e8d;
+  font-size: 20px;
+}
+
+/* ================ Media query================= */
+@media (max-width: 992px) {
+  #sidebar {
+    display: none;
+  }
+}
